<resources>
    <string name="app_name">7 Pir</string>
    <string name="_7_pir">7 Pir</string>
    <string name="haqida">Haqida</string>
    <string name="bog_lanish">Bog\'lanish</string>
    <string name="joylashuv">Joylashuv</string>
    <string name="xoja_abduxoliq_g_ijduvoniy">Xoja Abduxoliq G\'ijduvoniy</string>
    <string name="xoja_orif_revgariy">Xoja Orif Revgariy</string>
    <string name="xoja_mahmud_anjir_fag_naviy">Xoja Mahmud Anjir Fag\'naviy</string>
    <string name="xoja_ali_romitaniy">Xoja Ali Romitaniy</string>
    <string name="xoja_mahmud_boboyi_samosiy">Xoja Mahmud Boboyi Samosiy</string>
    <string name="xoja_sayyid_amir_kulol">Xoja Sayyid Amir Kulol</string>
    <string name="xoja_bahouddin_naqshband">Xoja Bahouddin Naqshband</string>
    <string name="gijduvoniy">Abduxoliq Gʻijduvoniy, Xoja Abdulxoliq ibn Abduljamil Gʻijduvoniy (1103- Gʻijduvon — 1179) — xojagon tasavvufiy tariqatining asoschisi va nazariyotchilaridan biri.
Xojaiy Jahon nomi bilan ham mashhur. Uning tarjimai holiga bagʻishlab nomaʼ-lum muallif yozgan „Zikri voqioti Xo-jaiy Jahon Abdulxoliq Gʻijduvoniy“ asarining 1717-yilda koʻchirilgan nusxasi Oʻzbekiston Fanlar Akademiyasi Sharqshunoslik institutida saqlanmoqda. 9 yoshida Qur’onni yod olgan. 10 yoshidan boshlab, darvishlarning zikrlarida faol ishtirok etgan. Buxorolik ilk ustozi Imom Sadriddindan tafsir ilmini oʻrganadi. 22 yoshida Yusuf Hamadoniy bilan uchrashib, uning muridiga aylanadi. Oʻzini ibodatu riyozatga mashgʻul tutib, butun hayoti davomida 5 asar bitadi. Bulardan „Maqomoti Xoja Yusuf Hamadoniy“ („Xoja Yusuf Hamadoniy fazilatlari“) asarida ustozining tarjimai holi va uning taʼlimoti yoritiladi. A. F. Yusuf Hamadoniy taʼlimotini har tomonlama boyitib, amaliyotga zikri xufiyani olib kirdi hamda xojagonlik tariqatining 8 ta rashha (qonun-qoida)sini shakllantirib berdi. A. F. taʼlimoti keyingi davr yirik sufiylari tomonidan oʻrganilgan va sharhqilingan. Mas, „Maxdumi Aʼzam“ laqabi bilan mashhur boʻlgan Ahmad ibn Mavlono Jaloluddin Xojagiy Kosoniy A. Gʻ.ning 4 vasiyatini „Risolai chahor kalima“ („Toʻrt soʻz haqida risola“) asarida sharhlagan. A. F. tasavvufga oid taʼlimotining asosiy qismi Abdurahmon Jomiyning ustozi Mavlono Saʼduddin Koshgʻariy (1456-yil v. e.)ning „Risola“ asarida bayon etilgan.
</string>
    <string name="revgariy">“Yetti pir” silsilasiga mansub Xoʻja Orif Revgariy (Mohitobon) ziyoratgohi istiqlolimizning 28 yilligi ayyomi arafasida yanada obod maskanga aylandi.Prezidentimizning tegishli topshiriq va tavsiyalari asosida bu qadamjoda ulkan qurilish va obodonchilik yumushlari bajarildi.Hazrat dahmasi taʼmirdan chiqarildi, bir paytning oʻzida 500 nomozxonni sigʻdira oladigan masjid, tahoratxona, muzey, minora, ayvonlar, darvoza hamda 80 oʻrinli “Poykent” mehmonxonasi barpo qilindi.6 gektar hududda bajarilgan 15 milliard soʻmga teng bunyodkorlik ishlaridan soʻng Shofirkon tuman markazidagi bu ziyoratgohda tantanali marosim oʻtkazildi.Unda Oʻzbekiston Musulmonlari idorasi vakillari, “Nuroniy”, “Mahalla” fondlari faollari, keng jamoatchilik ishtirok etdi.Viloyat hokimi Oʻ. Barnoyev soʻz olib, ulugʻ bobokalonimiz mangu qoʻnim topgan maskanning obod etilishi yurtimizda diniy va milliy qadriyatlarimiz koʻz qorachigʻidek asrab – avaylanayotgani, Xoʻja Orif Mohitobonning maʼnaviy merosi keng targʻib qilinayotgani ifodasi ekanini taʼkidladi.Tabiiyki, bu kabi yumushlar yurtimizda ziyorat turizmi ravnaqiga ham hissa qoʻshadi.
</string>
    <string name="fagnaviy">Xoja Mahmud Anjir Fagʻnaviy [12-asr oxiri — Vobkent tumani Anjir Fagʻnav (qoz. Anjirbogʻ) qishlogʻi — 1286] — Xojagon Naqshbandiya tariqatining yirik namoyandasi, buxorolik 7 pirning uchinchisi. Gilkorlik bilan shugʻullangan. Xoja Orif Mohitobon — Revgariyyadan tahsil olib, uning vafotidan soʻng xojagonlik silsilasini boshqargan. "Silsilai sharif" da 12 halqanig piri hisoblanadi. Xufiyona (yashirin) zikr bilan jahriya (baland tovushli) zikrga baravar amal etgan. Xoja Ali Romitaniy (Xojai Azizon) ga ustozlik qilgan. Fagʻnaviy tugʻilgan qishlogʻida dafn etilgan. Qabri ustidagi maqbara mustaqillik davrida taʼmirlanib, maqbara yonida hovuz va jomeʼ masjid qurilgan. Bu joy hozir ziyoratgohga aylantirilgan.XIII asr boshlarida Buxoro viloyati Vobkent tumani Anjir Fag’naviy qishlog’ida tug’ilganlar.Bu qishloqning hozirgi nomi Anjirbog’dir.Xoja Mahmud Anjir Fag’naviy ilmi qol va ilmi holni Hazrat Xoja Orif ar Revgariydan o’rgangan.Xoja Mahmud Anjir Fag’naviyning kasblari gilkorlik bo’lgan.
</string>
    <string name="romitaniy">Romitaniy Xoja Ali, Xojai Azizon (13-asr oʻrtalari — Romitan tumani Qoʻrgʻon qishlogʻi — 1316/1321) — xojagonnaqshbandiya tariqati vakili. Toʻquvchilik bilan mashgʻul boʻlgan. Xorazmda bir muddat yashab, xonaqo ochgan va xojagoniyani mazkur hududda tarqatgan. Sufiylik yoʻlidagi ustozi Maxmud Anjirfagʻnaviydir. Oʻz navbatida, R. Xoja Muhammad Boboyi Samosiynmng ustozi hisoblanadi. Bizgacha "Manoqibi Xoja Ali Azizon Romitaniy" asari yetib kelgan. Asarda R.ning tasavvuf axlining axloqodobi, xojagon tariqati qonunqoidalari bilan bogʻliq qarashlari, pandnasihatlari jamlangan. Xojagonlik tariqatining 10 sharti bayon qilingan "Risolai Hazrati Azizon" nomli kichik hajmli asar ham R.ga nisbat beriladi. R. Sariboʻston qishlogʻi (Qoʻrgon qishlogʻi yaqini)da dafn etilgan. Qabri ustida maqbara qurilgan, u mustaqillik davrida taʼmirlangan. R. qabri ziyoratgoh hisoblanadi.
</string>
    <string name="samosiy"> Xoʻja Ali Romitaniyning shogirdi mashhur soʻfiyning dafn qilingan joyidir. Xoja Muhammad Boboyi Samosiy XIII asr oxiri, Romitan tumanidagi Samos qishlogʻida tugʻilgan xojagon-naqshbandiya tariqatining yirik namoyandasi, buxorolik 7 pirning beshinchisi. Xoja Ali Romitaniydan tahsil olib, uning vafotidan soʻng xojagonlik tarikatini boshqargan. Bahouddin Naqshband tugʻilganda uni maʼnaviy farzandlikka qabul qilgan. Samosiy bogʻbonlik bilan kun kechirgan. 1354-yilda 95 yoshida vafot etgan. Muqaddas maqbara Romitan tumanining Simas qishlogʻida joylashgan. Ushbu yerda ajoyib insonning oʻz taʼlimotlariga monand ravishda maqbara, masjid, quduq va goʻzal bogʻ barpo etilgan.
</string>
    <string name="kulol">Sayid Amir Kulol dafn etilgan joy. Hayoti davomida u „buyuk“ degan maʼnoni anglatuvchi Kalon nomini olgan. Kulol Buxoriy XIII asr oxiri, Buxoro yaqini (hozirgi Kogon tumani)dagi Suxor qishlogʻi da tugʻilgan. Xojagon-naqshbandiya tariqatining yirik namoyandasi Sayid Amir Kulol diniy ulamo boʻlib, yuzdan ortiq izdoshlarga ega edi, ular orasida Bahouddin Muhammad Naqshbandiy ham bor edi. Otalari Amir Hamza boʻlib. Hijozdan (Hozirgi Saudiya Arabistoni) Buxoroning Afshona (Peshku)qishlogʻida koʻchib kelganlar.U Naqshbandiyni soʻfiylik asoslari, zikrni toʻgʻri oʻqish bilan tanishtirdi. Bu zot — paygʻambar nasablaridan boʻlganliklari uchun sayyidlardan hisoblanadilar. Sayyid Amir Kulol hayotlarida Buxorodan tashqaridga chiqgan emas, yaʼni Makkada ham, Madinada ham va na boshqa joylarda boʻlgan. Sayid Amir Kulol 1370-yilda oʻzining tugʻilib oʻsgan Suxar qishlogʻida dafn etilgan va qabri ustida maqbara oʻrnatilgan.
</string>
    <string name="naqshband">Bahouddin Naqshband (Muhammad binni Muhammad Bahouddin an-Naqshband al-Buxoriy) 1318-yil, Chigʻatoy ulusi, Buxoro yaqinidagi Qasri Hinduvon qishlogʻida tugʻiladi. Bahouddin Naqshband Muhammad paygʻambar avlodlariga mansub sayyidzodalardan ekanligi qayd etilgan va ota tomondan 11-imom Imom Xasan al-Askariyning ikkinchi oʻgʻli Sayyid Ali Akbarni avlodi hisoblanadi. Otasi Muhammad Buxoriy toʻquvchi hamda oʻyma naqsh soluvchi (naqshband) boʻlgan va oʻgʻli ham bu hunarni egallaydi.Bahouddin Naqshbandning birinchi piri — ustozi Xoja Muhammad Boboyi Samosiy edi. Keksa shayx yosh Bahouddin Naqshbandni tarbiyalashni oʻrinbosarlaridan boʻlmish Amir Sayyid Kulolga topshirdi. U tariqat bobida bilganlarini oʻrgatib boʻlgandan keyin shogʻirdiga ijozat beradi. Bahouddin Naqshband ilm istab, yassaviya tariqati shayxlarining mashhur vakillaridan boʻlmish Qusam shayx oldiga, Naxshab (hozirgi Qarshi) shahriga boradi. Taxminan 1389-yil Buxoro yaqinidagi Qasri Orifon qishlogʻida vafot etgan.
</string>
    <string name="dasturiy_injiniring_talabasi_mavlonov_bobur">Dasturiy injiniring talabasi Mavlonov Bobur</string>

</resources>